modified watchlist/trending, etc. layouts

--- a/app/src/main/res/layout/activity_now_playing_display.xml
+++ b/app/src/main/res/layout/activity_now_playing_display.xml
@@ -24,61 +24,77 @@
                 android:id="@+id/playing_toolbar"
                 layout="@layout/my_toolbar" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:drawableStart="@drawable/playing"
-                android:gravity="center"
-                android:text="@string/now_playing"
-                android:textAllCaps="true"
-                android:textColor="@android:color/black"
-                android:textSize="36sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorMovieDBgreen" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/playing_recyclerview"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-            </android.support.v7.widget.RecyclerView>
+                android:elevation="6dp"
+                android:layout_margin="4dp">
 
-            <TextView
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@color/colorMovieDBgreen"
+                        android:drawableStart="@drawable/ic_local_movies_white_48dp"
+                        android:gravity="center"
+                        android:text="@string/now_playing"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/white"
+                        android:textSize="36sp" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/playing_recyclerview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+                    </android.support.v7.widget.RecyclerView>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorMovieDBgreen" />
-
-            <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:drawableStart="@drawable/playing"
-                android:gravity="center"
-                android:text="@string/upcoming_movies"
-                android:textAllCaps="true"
-                android:textColor="@android:color/black"
-                android:textSize="36sp" />
+                android:elevation="6dp"
+                android:layout_margin="4dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorMovieDBgreen" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/upcoming_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-            </android.support.v7.widget.RecyclerView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@color/colorMovieDBgreen"
+                        android:drawableStart="@drawable/ic_local_movies_white_48dp"
+                        android:gravity="center"
+                        android:text="@string/upcoming_movies"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/white"
+                        android:textSize="36sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorMovieDBgreen" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorMovieDBgreen" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/upcoming_recyclerview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        >
+                    </android.support.v7.widget.RecyclerView>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
     </ScrollView>
