--- a/app/src/main/res/layout/activity_movie_ratings_display.xml
+++ b/app/src/main/res/layout/activity_movie_ratings_display.xml
@@ -19,72 +19,72 @@
             android:id="@+id/ratings_toolbar"
             layout="@layout/my_toolbar" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:drawableStart="@drawable/rate"
-            android:gravity="center"
-            android:text="@string/your_ratings"
-            android:textAllCaps="true"
-            android:textColor="@android:color/black"
-            android:textSize="36sp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen" />
-
-        <TextView
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/movies"
-            android:textColor="@android:color/black"
-            android:textSize="36sp" />
+            android:elevation="6dp"
+            android:layout_margin="4dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rating_recyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="120dp"
-            android:layoutAnimation="@anim/layout_animation_fall_down">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorMovieDBgreen"
+                    android:gravity="center"
+                    android:text="@string/movie_ratings"
+                    android:textColor="@android:color/white"
+                    android:textSize="36sp" />
 
-        </android.support.v7.widget.RecyclerView>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rating_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="120dp"
+                    android:layoutAnimation="@anim/layout_animation_fall_down">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/tv_shows"
-            android:textColor="@android:color/black"
-            android:textSize="36sp" />
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/show_rating_recyclerview"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="120dp"
-            android:layoutAnimation="@anim/layout_animation_fall_down">
+            android:elevation="6dp"
+            android:layout_margin="4dp">
 
-        </android.support.v7.widget.RecyclerView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorMovieDBgreen" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorMovieDBgreen"
+                    android:gravity="center"
+                    android:text="@string/show_ratings"
+                    android:textColor="@android:color/white"
+                    android:textSize="36sp" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/show_rating_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="120dp"
+                    android:layoutAnimation="@anim/layout_animation_fall_down">
+
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
