--- a/app/src/main/res/layout/activity_trending_display.xml
+++ b/app/src/main/res/layout/activity_trending_display.xml
@@ -23,34 +23,40 @@
                 android:id="@+id/trending_toolbar"
                 layout="@layout/my_toolbar" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:drawableStart="@drawable/ic_whatshot_black_48dp"
-                android:gravity="center"
-                android:text="@string/trending"
-                android:textAllCaps="true"
-                android:textColor="@android:color/black"
-                android:textSize="36sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorMovieDBgreen" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/trending_recyclerview"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layoutAnimation="@anim/layout_animation_fall_down"
-                >
-            </android.support.v7.widget.RecyclerView>
+                android:elevation="6dp"
+                android:layout_margin="4dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorMovieDBgreen" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@color/colorMovieDBgreen"
+                        android:drawableStart="@drawable/ic_whatshot_black_24dp"
+                        android:gravity="center"
+                        android:text="@string/trending"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/white"
+                        android:textSize="36sp" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/trending_recyclerview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layoutAnimation="@anim/layout_animation_fall_down"
+                        >
+                    </android.support.v7.widget.RecyclerView>
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
 
         </LinearLayout>
     </ScrollView>
