--- a/app/src/main/res/layout/activity_now_playing_display.xml
+++ b/app/src/main/res/layout/activity_now_playing_display.xml
@@ -36,6 +36,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/nowPlayingTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -70,6 +71,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/upcomingTextView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
