--- a/app/src/main/res/layout/activity_watch_list_display.xml
+++ b/app/src/main/res/layout/activity_watch_list_display.xml
@@ -29,6 +29,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/movieWatchlistTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorMovieDBgreen"
@@ -61,6 +62,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/showWatchListTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorMovieDBgreen"
