--- a/app/src/main/res/layout/activity_tvdetails.xml
+++ b/app/src/main/res/layout/activity_tvdetails.xml
@@ -412,7 +412,7 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/navView"
+        android:id="@+id/tv_navView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
